--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array.",
   "scripts": {
     "lint": "jshint index.js && jscs index.js --reporter inline",
-    "test": "node test.js",
-    "test-cov": "istanbul cover test.js",
-    "test-travis": "istanbul cover test.js --report lcovonly"
+    "test": "standard && node test.js",
+    "test-cov": "standard && istanbul cover test.js",
+    "test-travis": "standard && istanbul cover test.js --report lcovonly"
   },
   "author": {
     "name": "Charlike Mike Reagent",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "assertit": "^0.1.0",
-    "istanbul-harmony": "~0.3.1"
+    "istanbul-harmony": "~0.3.1",
+    "standard": "^3.7.3"
   }
 }
