--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array.",
   "scripts": {
-    "lint": "jshint index.js && jscs index.js --reporter inline",
     "test": "standard && node test.js",
     "test-cov": "standard && istanbul cover test.js",
     "test-travis": "standard && istanbul cover test.js --report lcovonly"
@@ -46,7 +45,7 @@
   },
   "devDependencies": {
     "assertit": "^0.1.0",
-    "istanbul-harmony": "~0.3.1",
+    "istanbul": "^0.3.9",
     "standard": "^3.7.3"
   }
 }
