--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array.",
   "scripts": {
     "test": "standard && node test.js",
-    "test-cov": "standard && istanbul cover test.js",
-    "test-travis": "standard && istanbul cover test.js --report lcovonly"
+    "travis": "standard && istanbul cover test.js --report lcovonly"
   },
   "author": {
     "name": "Charlike Mike Reagent",
