--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "abbrev-kindof",
-  "version": "1.0.1",
-  "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array.",
+  "version": "0.0.0",
+  "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array. useful for DB/Schema/Object validations",
   "scripts": {
-    "test": "standard && node test.js",
-    "travis": "standard && istanbul cover test.js --report lcovonly"
+    "test": "standard && node test.js"
   },
   "author": {
     "name": "Charlike Mike Reagent",
@@ -15,36 +14,13 @@
     "type": "git",
     "url": "git://github.com/tunnckoCore/abbrev-kindof.git"
   },
-  "keywords": [
-    "abbrev",
-    "abbreviations",
-    "array",
-    "check",
-    "kind",
-    "kindof",
-    "letter",
-    "object",
-    "polyfill",
-    "shim",
-    "single",
-    "string",
-    "tower",
-    "type",
-    "typeof",
-    "validate",
-    "validating"
-  ],
+  "keywords": [],
   "license": {
     "type": "MIT",
     "url": "https://github.com/tunnckoCore/abbrev-kindof/blob/master/LICENSE.md"
   },
-  "dependencies": {
-    "kind-of": "^1.1.0",
-    "map-types": "^0.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "assertit": "^0.1.0",
-    "istanbul": "^0.3.9",
-    "standard": "^3.7.3"
+    "assertit": "^0.1.0"
   }
 }
