--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ nbproject
 cache
 temp
 tmp
+abbrev-kindof
 
 # Packages #
 # ##########
@@ -53,3 +54,4 @@ Desktop.ini
 npm-debug.log
 .directory
 ._*
+lcov.info
