--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "abbrev-kindof",
   "version": "1.0.4",
-  "description": "`kind-of` with single letter abbreviations to javascript native types, like `kindof(val, 'soa')` will return true if `val` is string, object or array. useful for DB/Schema/Object validations",
+  "description": "Use abbreviations for checking type of given value. Like `kindof(val, 'soa')` to check that value is string, object or array.",
+  "repository": "tunnckoCore/abbrev-kindof",
+  "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "test": "standard && node test.js"
   },
-  "author": {
-    "name": "Charlike Mike Reagent",
-    "email": "mameto_100@mail.bg",
-    "url": "https://github.com/tunnckoCore"
+  "dependencies": {
+    "kind-of": "^2.0.1",
+    "map-types": "^0.1.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/tunnckoCore/abbrev-kindof.git"
+  "devDependencies": {
+    "assertit": "^0.1.0"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "abbrev",
     "abbreviations",
@@ -32,16 +37,5 @@
     "typeof",
     "validate",
     "validating"
-  ],
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/tunnckoCore/abbrev-kindof/blob/master/LICENSE.md"
-  },
-  "dependencies": {
-    "kind-of": "^1.1.0",
-    "map-types": "^0.1.0"
-  },
-  "devDependencies": {
-    "assertit": "^0.1.0"
-  }
+  ]
 }
